# TACO_2018

./: .gitignore  LICENSE.md  README.md
client/: .classpath  .gitignore
client/base/: .classpath  .travis.yml
client/base/config/images/agent/: nao.xcf
client/base/uml/sopasify/: autonomy.xml  runSopasify.sh
client/src/taco/: AudiCupClient.java
client/src/taco/agent/agentruntime/: AudiCupAgentRuntimeParameters.java  ComponentFactory.java  ComponentFactoryDecorator.java
client/src/taco/agent/agentruntime/scenarios/: AADC2018FinalScenario.java  AADC2018QualiScenario.java  DriveWaypointsScenario2.java  EmergencyCarScenario.java  IScenario.java  MergingEastScenario.java  MergingNorthScenario.java  MergingSouthScenario.java  MergingWestScenario.java  OvertakeScenario.java  Scenario.java  ScenarioBase.java
client/src/taco/agent/communication/perception/: IAudiCupPerception.java  IDoubleArrayPerceptor.java  ILidarPerceptor.java  IPositionPerceptor.java  PerceptorName.java  RecognizedObject.java  RecognizedObjectType.java
client/src/taco/agent/decision/behavior/: IBehaviorConstants.java
client/src/taco/util/drive/: AngleUtils.java  Circle2D.java  DriveGeometry.java  IBehaviorGeometry.java  Line2D.java
client/src/taco/util/serializer/: ManeuverListSerializer.java  RoadSignSerializer.java
config/: CarMetaModel2018.json
server/: CMakeLists.txt
server/config/2018/TACO_ADTF/: TACO_ADTF.adtfproject
server/config/2018/TACO_ADTF/adtfsessions/: Playback.adtfsession  Playback.adtfuilayout
server/include/: stdafx.h
server/scripts/: fixNVIDIA.sh  run_ADTF_2018.sh
server/src/: CMakeLists.txt
server/src/adtf/: CMakeLists.txt
server/src/adtf/decoder/: ADTFPinMessageDecoder.cpp
server/src/adtf/filters/: RuntimeService.cpp
server/src/adtf3/: CMakeLists.txt
server/src/adtf3/encoder/: ADTFPinMessageEncoder.cpp  ADTFPinMessageEncoder.h
server/src/adtf3/filters/: RateLimit.cpp  RateLimit.h  RuntimeService.cpp  RuntimeService.h
server/src/adtf3/filters/cameraImageRelay/: CMakeLists.txt  CameraImageRelay.cpp  CameraImageRelay.h
server/src/adtf3/filters/fisheyeUndistortionROI/: CMakeLists.txt  FisheyeUndistortionROI.cpp  FisheyeUndistortionROI.h  stdafx.h
server/src/adtf3/filters/imageWriter/: CMakeLists.txt  ImageWriter.cpp  ImageWriter.h
server/src/adtf3/util/: MediaDescriptionManager.cpp  MediaDescriptionManager.h
server/src/hsogserver/: AADCCar.h  CMakeLists.txt
server/src/hsogserver/communication/: Communication.cpp  Communication.h  PackageEncoder.cpp  PackageEncoder.h
server/src/hsogserver/communication/Encoder/: LaneAssistEncoder.h  LidarPerceptorEncoder.h  ManeuverListPerceptorEncoder.h  PositionPerceptorEncoder.h
server/src/hsogserver/detection/: CMakeLists.txt  ILaneDetection.h
server/src/hsogserver/detection/lanedetection/: LaneCutter.cpp  LaneCutter.h  LaneCutterRenderer.cpp  LaneCutterRenderer.h  LaneCutterResult.h  LaneDetection.cpp  LaneDetection.h  ScanLine.cpp  ScanLine.h
server/src/hsogserver/detection/lanedetection/test/: CMakeLists.txt  LaneAssistTest.cpp  LaneCutterTest.cpp  TestUtils.h
server/src/hsogserver/general/: ComponentFactory.cpp  ComponentFactory.h  IComponentFactory.h
server/src/hsogserver/meta/: ICarMetaModel.h
server/src/hsogserver/meta/impl/: CarMetaModel.cpp  CarMetaModel.h  JSONCarMetaModel.cpp  JSONCarMetaModel.h  JSONCarMetaModelHandler.h
server/src/hsogserver/perception/: ILaneMiddlePerceptor.h  ILidarPerceptor.h  IPerception.h  IPositionPerceptor.h
server/src/hsogserver/perception/impl/: IMUPerceptor.h  LaneMiddlePerceptor.h  LidarPerceptor.h  LidarValue.h  Maneuver.h  Perception.cpp  Perception.h  PositionPerceptor.h
server/src/hsogserver/utils/driveinstructionreader/: DriveInstructionReader.cpp
vision/: object_detection_server.py  start.sh
vision/config/: vision_server.config.json  vision_server.config_crossroads.json  vision_server.config_siren.json  vision_server.config_tf1.11_frcnn_incep_v2_200k_coco.json  vision_server.config_tf1.11_frcnn_res101_200k_coco.json  vision_server.config_tf1.11_frcnn_res101_200k_coco_maxproposals100.json  vision_server.config_tf1.11_frcnn_res101_200k_coco_maxproposals200.json  vision_server.config_tf1.11_frcnn_res101_200k_kitti.json  vision_server.config_tf1.11_frcnn_res50_200k_coco.json  vision_server.config_tf1.11_rfcn_res101_200k_coco.json  vision_server.config_tf1.11_rfcn_res101_200k_coco_slim.json
vision/data/: aadc_labels_2018.pbtxt  aadc_labels_2018_slim.pbtxt  aadc_labels_crossroads.pbtxt  aadc_labels_siren.pbtxt
vision/scripts/: create_final_image_folder.py  sloth2TFRecord.py  taco_analyzeAnnotation.py  taco_fuseAnnotations.py  taco_mergeAnnotations.py  taco_remove_annotations.py  taco_subset.py  taco_tag_objects.py  taco_tools.py  validate.py
vision/utils/: prepare_ground_truth.py  prepare_ground_truth_test.py  tf_object_detection_eval.py  visualisation.py
(+376 files in other folders)
